# LemonEngine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Lemon.slnx  LemonEngine.slnx  README.md  compile_commands.json  premake5.lua
Lemon/: .clang-tidy  CMakeLists.txt  Lemon.vcxproj  Lemon.vcxproj.filters  shader.hlsl
Lemon/src/: Lemon.h  lmpch.h
Lemon/src/Lemon/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Lemon/src/Lemon/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Lemon/src/Lemon/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Lemon/src/Lemon/Renderer/: Buffer.h  Mesh.h  MeshAsset.h  MeshLoader.h  RHITypes.h  Renderer.cpp  Renderer.h  ResourcePool.h  TestDXLayer.cpp  TestDXLayer.h  VertexBuffer.h
Lemon/src/Lemon/Renderer/Backends/DX/: DXBuffer.cpp  DXBuffer.h  DXDevice.cpp  DXDevice.h  DXIndexBuffer.cpp  DXIndexBuffer.h  DXPipeline.h  DXShader.cpp  DXShader.h  DXShaderPiece.cpp  DXShaderPiece.h  DXUtils.cpp  DXUtils.h  DXVertexBuffer.cpp  DXVertexBuffer.h
Lemon/src/Lemon/Renderer/Backends/DX/API/: DXDescriptorHeap.h  DXGraphicsPSODesc.cpp  DXGraphicsPSODesc.h  DXPSO.cpp  DXPSO.h  DXRootSignatureDesc.cpp  DXRootSignatureDesc.h  DXUtils.cpp  DXUtils.h  Helpers.cpp  Helpers.h  TranslationHelpers.h
Lemon/src/Lemon/Renderer/Backends/DX/Commands/: DXCommandList.cpp  DXCommandList.h  DXCommandQueue.cpp  DXCommandQueue.h
Lemon/src/Lemon/Renderer/Backends/DX/Pipelines/: DXPipeline.h  DXShader.cpp  DXShader.h
Lemon/src/Lemon/Renderer/Backends/DX/Resources/: DXBuffer.cpp  DXBuffer.h  DXSwapchain.cpp  DXSwapchain.h  DXTexture.cpp  DXTexture.h  DXUploadContext.cpp  DXUploadContext.h
Lemon/src/Lemon/Renderer/Buffers/: IndexBuffer.h  VertexBuffer.h
Lemon/src/Lemon/Renderer/Helpers/: VertexLayoutBuilder.cpp  VertexLayoutBuilder.h
Lemon/src/Lemon/Renderer/Pipelines/: IShader.h  IShaderPipeline.h  ShaderPiece.h
Lemon/src/Lemon/Renderer/RHI/Helpers/: Builders.cpp  Builders.h  RHIHelpers.cpp  RHIHelpers.h  VertexLayoutBuilder.cpp  VertexLayoutBuilder.h
Lemon/src/Lemon/Renderer/RHI/Interfaces/: IBuffer.h  ICommandList.h  ICommandQueue.h  IDevice.cpp  IDevice.h  IFence.h  IPipeline.h  IShader.h  ISwapchain.h  ITexture.h  IUploadContext.h
Lemon/src/Lemon/Renderer/RHI/Types/: RHICommandTypes.h  RHIEnums.h  RHITypes.cpp  RHITypes.h
Lemon/src/Lemon/Renderer/Resources/: ResourceManager.cpp  ResourceManager.h  ResourcePool.h  ResourceRegistry.h
Lemon/src/Platform/: WindowsWindow.cpp  WindowsWindow.cpp.old  WindowsWindow.h  WindowsWindow.h.old
Sandbox/: CmakeLists.txt  Sandbox.vcxproj
Sandbox/assets/: cone.fbx  monkey.fbx  shader.hlsl
Sandbox/src/: Sandbox.cpp
assets/: shader.hlsl
scripts/: GenerateProjects.bat
